fix: added wrap

--- a/components/cards/projects/styles.module.sass
+++ b/components/cards/projects/styles.module.sass
@@ -22,7 +22,7 @@
 .project__card__text__tags__list
     display: flex
     align-items: center
-
+    flex-wrap: wrap
     gap: 0.2rem
     font-size: 0.7rem
 
@@ -30,7 +30,6 @@
     display: flex
     justify-content: center
     align-items: center
-    width: 100%
     overflow: hidden
     img
         width: 100%
